2002-12-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menuitem.c (menuitem_paint):
	* fvwm/colorset.c (parse_colorset):
	* fvwm/icons.c (DrawIconPixmapWindow):
	* fvwm/focus.c (_SetFocusWindow):
	(_ReturnFocusWindow):
	(_DeleteFocus):
	(_ForceDeleteFocus):
	(__activate_window_by_command):
	patches to prevent UMR messages in memory debuggers

2002-12-11  Jason Weber <baboon@imonk.com>

	* fvwm/fvwm.1.in: Added ScanWindow

	* fvwm/conditional.c (CMD_Direction, CMD_ScanWindow, direction_cmd):
	* fvwm/commands.h:
	* fvwm/functable.c:
	Generalized CMD_Direction into direction_cmd.
	Pipe CMD_Direction and CMD_ScanWindow into direction_cmd.
	Replace Cycle prefix with secondary direction argument.

2002-12-10  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in: Applied Mikhael's quote fix.

2002-12-05  Marcus Lundblad <ml@update.uu.se>
	* fvwm/conditional.c (CreateConditionMask):
	Implemented conditional "FixedSize" and "HasHandles"
	* fvwm/fvwm.1.in
	Documented conditional options "FixedSize" and "HasHandles".

2002-12-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (PlaceWindow):
	fixed StickyAcrossDesks w/ StartsOnPage

	* fvwm/functable.c:
	* fvwm/commands.h:
	* fvwm/ewmh_conf.c (set_state_workaround):
	* fvwm/update.c (apply_window_updates):
	* fvwm/windowlist.c (CMD_WindowList):
	* fvwm/ewmh_events.c (ewmh_WMDesktop):
	(ewmh_WMStateSticky):
	* fvwm/conditional.c (CreateConditionMask):
	* fvwm/gnome.c (GNOME_SetHints):
	(GNOME_GetStyle):
	(GNOME_HandlePropRequest):
	* fvwm/placement.c (SmartPlacement):
	(get_next_x):
	(get_next_y):
	(test_fit):
	(PlaceWindow):
	* fvwm/session.c (SaveWindowStates):
	(MatchWinToSM):
	(MatchWinToSM):
	* fvwm/ewmh.c (check_desk):
	(EWMH_SetWMDesktop):
	(ewmh_ComputeAndSetWorkArea):
	(ewmh_HandleDynamicWorkArea):
	(ewmh_HandleDesktop):
	(ewmh_HandleDock):
	(ewmh_HandleMenu):
	(ewmh_HandleToolBar):
	* fvwm/virtual.c (UnmapDesk):
	(MapDesk):
	(MoveViewport):
	(do_move_window_to_desk):