@@ -1,3 +1,12 @@
+
+2002-12-12  Jason Weber <baboon@imonk.com>
+
+	* fvwm/fvwm.1.in:
+	* fvwm/conditional.c (CMD_ScanForWindow):
+	* fvwm/commands.h:
+	* fvwm/functable.c:
+	rename ScanWindow to ScanForWindow
+
 2002-12-12  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menuitem.c (menuitem_paint):
